Complete changes to font styling

--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Landing Page</title>
-        <link rel="stylesheet" href="index.html">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+      <div class="topsection">
       <div class="header">
-          <p>Header Logo</p>
+          <p class="logo">Header Logo</p>
           <ul>
-              <li><a href="#">Header link one</a></li>
-              <li><a href="#">Header link two</a></li>
-              <li><a href="#">Header link three</a></li>
+              <li><a href="#">header link one</a></li>
+              <li><a href="#">header link two</a></li>
+              <li><a href="#">header link three</a></li>
           </ul>
+      </div>
+      <div class="hero">    
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
           <button type="button">Sign up</button>
-          <p>This is a placeholder for an image.</p>
+          <img src="img/sunset.jpg" class="header-img" alt="Cloudy pink/purple sunset behind mountains and water with floating ice">
       </div>
+    </div> 
     </body>
 </html>
