--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
               <li><a href="#">header link three</a></li>
           </ul>
       </div>
-      <div class="hero">    
+      <div class="hero">
+          <div class="herotext">    
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
           <button type="button">Sign up</button>
+          </div>
           <img src="img/sunset.jpg" class="header-img" alt="Cloudy pink/purple sunset behind mountains and water with floating ice">
       </div>
     </div> 
