Add html of info section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
           </div>
           <img src="img/sunset.jpg" class="header-img" alt="Cloudy pink/purple sunset behind mountains and water with floating ice">
       </div>
+    </div>
+    <div class="infosection">
+        <h2>Some random information.</h2>
+        <div class="card">
+          <img src="img/marble.jpg" class="squareimage">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img src="img/brick.png" class="squareimage">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img src="img/mandala.jpg" class="squareimage">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <img src="img/green-tile.png" class="squareimage">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
     </div> 
     </body>
 </html>
