Add HTML and CSS for info section

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <img src="img/sunset.jpg" class="header-img" alt="Cloudy pink/purple sunset behind mountains and water with floating ice">
       </div>
     </div>
-    <div class="infosection">
-        <h2>Some random information.</h2>
+        <h2 class="info-heading">Some random information.</h2>
+        <div class="info-section">
         <div class="card">
           <img src="img/marble.jpg" class="squareimage">
           <p>this is some subtext under an illustration or image</p>
