--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
         <h2 class="info-heading">Some random information.</h2>
-        <div class="info-section">
+    <div class="info-section">
         <div class="card">
           <img src="img/marble.jpg" class="squareimage">
           <p>this is some subtext under an illustration or image</p>
@@ -44,5 +44,9 @@
           <p>this is some subtext under an illustration or image</p>
         </div>
     </div> 
+    <div class="quote-section">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">- Thor, God of Thunder</p>
+    </div>
     </body>
 </html>
