--- a/index.html
+++ b/index.html
@@ -55,5 +55,8 @@
         </div>
           <button type="button">Sign up</button>
     </div>
+    <footer>
+        <p> Copyright © The Odin Project 2021</p>
+    </footer>
     </body>
 </html>
